# LockstepDualisation

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  benchmarks.py  fullerenes.patch  plot-benchmarks.py  reproduce.ipynb  requirements.txt
benchmarks/: CMakeLists.txt  baseline.cc  buckybench.cc  multi_gpu.cc  multi_node_multi_gpu.cc  omp_multicore.cc  single_gpu.cc
benchmarks/sycl/: CMakeLists.txt  baseline_pipeline.cc  dualisation.cc  multinode_benchmark.cc  pipeline.cc  pipeline_benchmark.cc  sycl_benchmark.cc
include/: config.hh.in  cpp_kernels.h  cu_array.h  cuda_kernels.h  dual.h  isomer_batch.h  launch_ctx.h  sycl_kernels.h  util.h
isomerspace_samples/: cubic_20_seed_42  cubic_24_seed_42  cubic_26_seed_42  cubic_28_seed_42  cubic_30_seed_42  cubic_32_seed_42  cubic_34_seed_42  cubic_36_seed_42  cubic_38_seed_42  cubic_40_seed_42  cubic_42_seed_42  cubic_44_seed_42  cubic_46_seed_42  cubic_48_seed_42  cubic_50_seed_42  cubic_52_seed_42  cubic_54_seed_42  cubic_56_seed_42  cubic_58_seed_42  cubic_60_seed_42  cubic_62_seed_42  cubic_64_seed_42  cubic_66_seed_42  cubic_68_seed_42  cubic_70_seed_42  dual_layout_20_seed_42  dual_layout_22_seed_42  dual_layout_24_seed_42  dual_layout_26_seed_42  dual_layout_28_seed_42  dual_layout_30_seed_42  dual_layout_32_seed_42  dual_layout_34_seed_42  dual_layout_36_seed_42  dual_layout_38_seed_42  dual_layout_40_seed_42  dual_layout_42_seed_42  dual_layout_44_seed_42  dual_layout_46_seed_42  dual_layout_48_seed_42  (+11 more)
scratch/: Makefile  mpi_hello_world.cpp
src/: CMakeLists.txt  dual.cu  dual_omp.cc  launch_ctx.cu
src/c++/: CMakeLists.txt  dual_omp.cc  isomer_batch.cc  util.cc
src/cuda/: CMakeLists.txt  cu_array.cu  dual.cu  isomer_batch.cu  launch_ctx.cu  util.cu
src/sycl/: CMakeLists.txt  cubic-graph.cc  dual.cc  forcefield.cc  isomer_batch.cc  nop_kernel.cc  projection.cc  tutte.cc  util.cc
validation/: CMakeLists.txt  gpu_validation.cc  omp_validation.cc
validation/sycl/: CMakeLists.txt  sycl_validation.cc
