if(OpenMP_FOUND)
  add_executable(omp_validation omp_validation.cc)
  target_compile_options(omp_validation PUBLIC ${OpenMP_CXX_FLAGS})
  target_link_libraries(omp_validation cpp_lib fullerenes OpenMP::OpenMP_CXX)
endif()

if(CMAKE_CUDA_COMPILER)
    add_executable(gpu_validation gpu_validation.cc)
    target_link_libraries(gpu_validation cuda_lib fullerenes)
endif()
